--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gluestack-style/react": "^1.0.41",
     "@gluestack-ui/config": "^1.0.13",
     "@gluestack-ui/themed": "^1.0.37",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.2",
@@ -27,7 +29,7 @@
     "@react-native/babel-preset": "0.73.19",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.3",
-    "@react-native/typescript-config": "0.73.1",
+    "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
