--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@gluestack-style/react": "^1.0.41",
     "@gluestack-ui/config": "^1.0.13",
     "@gluestack-ui/themed": "^1.0.37",
-    "@mdi/js": "^7.4.47",
-    "@mdi/react": "^1.6.1",
+    "@react-aria/checkbox": "^3.14.1",
+    "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-navigation": "^5.0.0"
   },
