--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
@@ -40,6 +42,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
