--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-aria/checkbox": "^3.14.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native-stack": "^6.9.20",
+    "@types/realm": "^1.13.0",
     "axios": "^1.6.7",
+    "core-js": "^3.36.0",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
@@ -25,7 +28,9 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "realm": "^12.6.1",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
