--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-native": "0.73.2",
     "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-navigation": "^5.0.0",
-    "realm": "^12.6.1",
+    "realm": "^12.6.2",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
