--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "core-js": "^3.36.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react-native": "^0.344.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
