--- a/package.json
+++ b/package.json
@@ -19,14 +19,21 @@
     "@types/realm": "^1.13.0",
     "axios": "^1.6.7",
     "core-js": "^3.36.0",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.344.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-native": "0.73.2",
+    "react-native-calendar-picker": "^8.0.1",
+    "react-native-date-input": "^1.0.11",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-gallery": "^2.1.5",
+    "react-native-paper-dates": "^0.22.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
@@ -44,6 +51,7 @@
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
