--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-swiper": "^1.6.0",
     "react-navigation": "^5.0.0",
     "realm": "^12.6.2",
+    "uuidv4": "^6.2.13",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
