--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.36.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "expo-web-browser": "^12.8.2",
     "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.344.0",
     "nativewind": "^2.0.11",
@@ -33,6 +34,7 @@
     "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-gallery": "^2.1.5",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-paper-dates": "^0.22.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
