--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/themed": "^1.0.37",
     "@react-aria/checkbox": "^3.14.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.20",
     "@types/realm": "^1.13.0",
     "axios": "^1.6.7",
@@ -41,6 +42,7 @@
     "react-native-swiper": "^1.6.0",
     "react-navigation": "^5.0.0",
     "realm": "^12.6.2",
+    "socket.io-client": "^4.7.5",
     "uuidv4": "^6.2.13",
     "zustand": "^4.5.1"
   },
