--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-gallery": "^2.1.5",
+    "react-native-image-picker": "^7.1.2",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-paper-dates": "^0.22.3",
     "react-native-safe-area-context": "^4.9.0",
