--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gluestack-ui/config": "^1.0.13",
     "@gluestack-ui/themed": "^1.0.37",
     "@react-aria/checkbox": "^3.14.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.20",
