--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'purrpetApp' do
+target 'PurrPet App' do
   config = use_native_modules!
 
   use_react_native!(
