--- a/ios/purrpetApp.xcodeproj/xcshareddata/xcschemes/purrpetApp.xcscheme
+++ b/ios/purrpetApp.xcodeproj/xcshareddata/xcschemes/purrpetApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "purrpetApp.app"
-               BlueprintName = "purrpetApp"
-               ReferencedContainer = "container:purrpetApp.xcodeproj">
+               BuildableName = "PurrPet App.app"
+               BlueprintName = "PurrPet App"
+               ReferencedContainer = "container:PurrPet App.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "purrpetAppTests.xctest"
                BlueprintName = "purrpetAppTests"
-               ReferencedContainer = "container:purrpetApp.xcodeproj">
+               ReferencedContainer = "container:PurrPet App.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "purrpetApp.app"
-            BlueprintName = "purrpetApp"
-            ReferencedContainer = "container:purrpetApp.xcodeproj">
+            BuildableName = "PurrPet App.app"
+            BlueprintName = "PurrPet App"
+            ReferencedContainer = "container:PurrPet App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "purrpetApp.app"
-            BlueprintName = "purrpetApp"
-            ReferencedContainer = "container:purrpetApp.xcodeproj">
+            BuildableName = "PurrPet App.app"
+            BlueprintName = "PurrPet App"
+            ReferencedContainer = "container:PurrPet App.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
