--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-paper-dates": "^0.22.3",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
