--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-API_URL=https://86c6-27-64-247-191.ngrok-free.app/api
+API_URL=https://api.purrpet.me/api
 API_REFRESH_TOKEN_URL=auth/refresh-token
 APP_COOKIE_ACCESS_TOKEN=access_token
 APP_COOKIE_REFRESH_TOKEN=refresh_token
-SOCKET_URL=https://petshop-api-f5ef07c9f712.herokuapp.com
+SOCKET_URL=https://api.purrpet.me
+# https://petshop-api-f5ef07c9f712.herokuapp.com
